syntax = "proto3";

package rivet.chirp;

import "legacy/proto/common.proto";

message Message {
	reserved 1;
	rivet.common.Uuid req_id = 4;
	rivet.common.Uuid ray_id = 2;
	repeated string parameters = 7;
	int64 ts = 5;
	repeated TraceEntry trace = 6;
	
	bytes body = 3;

	// Allows a message with a topic that is already in the trace to be published again. 
	// 
	// For example: `cluster-server-install` which re-triggers `cluster-server-scale`. The logic within the two scripts
	// ensures it is not cyclical.
	bool allow_recursive = 8;
}

message Request {
	rivet.common.Uuid req_id = 1;
	rivet.common.Uuid ray_id = 2;
	int64 ts = 6;
	repeated TraceEntry trace = 7;
	bytes body = 3;
	optional RequestDebug debug = 4;

	// Suppresses both the request and reply of this request in the logs.
	//
	// This is useful for very verbose requests and for requests with sensitive data.
	bool dont_log_body = 5;
}

message TraceEntry {
	reserved 4;

	string context_name = 1;
	rivet.common.Uuid req_id = 2;
	int64 ts = 3;
}

enum RunContext {
	SERVICE = 0;
	TEST = 1;
}

message RequestDebug {
	/// If this request is coming from a test.
	bool test = 2;

	/// Overrides the request timestamp. Useful for testing services that
	/// perform time-dependent operations.
	int64 override_ts = 1;
}

message Response {
	message Ack {

	}

	message Ok {
		bytes body = 1;
	}

	message Err {
		message Internal {
			reserved 4;

			string ty = 1;
			string message = 2;
			string debug = 3;
		}

		message BadRequest {
			string code = 1;
			map<string, string> context = 2;
			optional string metadata = 3; // JSON
		}

		oneof kind {
			Internal internal = 1;
			BadRequest bad_request = 2;
		}
	}

	oneof kind {
		Ack ack = 3;
		Ok ok = 1;
		Err err = 2;
	}
}

message DebugServiceError {
	string context_name = 1;
	Response.Err error = 2;
}

